<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/BooksFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".tabBooks.BooksFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/searchBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:ems="10"
                android:hint="@string/search_by_title"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/btnSearch"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/search"
                app:layout_constraintEnd_toStartOf="@+id/btnMore"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/searchBox"
                app:layout_constraintTop_toTopOf="@+id/searchBox" />

            <Button
                android:id="@+id/btnMore"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="+"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnSearch"
                app:layout_constraintTop_toTopOf="@+id/btnSearch" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/moreContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/btnMore"
                tools:visibility="visible">

                <Button
                    android:id="@+id/btnSort"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="A-Z"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/filter_genre"
                    app:layout_constraintStart_toEndOf="@+id/btnSort"
                    app:layout_constraintTop_toTopOf="@+id/textView2" />

                <Spinner
                    android:id="@+id/genreSelect"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/labelContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10sp">

            <TextView
                android:id="@+id/tvTitleLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="normal"
                app:layout_constraintEnd_toStartOf="@+id/tvGenreLabel"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvGenreLabel"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/genres"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/tvTitleLabel"
                app:layout_constraintEnd_toStartOf="@+id/tvReadLabel"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvTitleLabel" />

            <TextView
                android:id="@+id/tvReadLabel"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/finished"
                app:layout_constraintBottom_toBottomOf="@+id/tvGenreLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvGenreLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/rlscrollContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom|end"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:src="@android:drawable/ic_input_add"
                android:translationY="-16dp"
                android:visibility="visible"
                app:backgroundTint="@color/blue_light_main" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fabMenuContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/fab"
                android:layout_alignEnd="@+id/fab"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="3dp"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:translationZ="2dp"
                android:visibility="gone"
                tools:visibility="visible">

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btnAddBook"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:text="@string/new_book" />

                        <Button
                            android:id="@+id/btnAddGenre"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:text="@string/new_genre" />

                        <Button
                            android:id="@+id/btnEditGenre"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_genre" />
                    </LinearLayout>
                </ScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBookList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.recyclerview.widget.RecyclerView>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
